# rpi-pico-projects

./: .gitmodules  CMakeLists.txt  README.md
blink/: CMakeLists.txt  blink.cpp  blink_both.cpp  blink_ex.cpp
i2c-seeker/: CMakeLists.txt  i2c-scanner.cpp
interupt_test/: CMakeLists.txt  irq.cpp
lux_sensor/: CMakeLists.txt  CMakeLists.txt.save  lux.cpp
multi-core-example/: CMakeLists.txt  multiCoreExample.cpp  webExample.cpp
print/: CMakeLists.txt  print.cpp
slide_potentiometer/: CMakeLists.txt  slide.cpp
ssd1306/: CMakeLists.txt  lcd.cpp  ssd1306.cpp  ssd1306.h
steperMotor/: CMakeLists.txt
steperMotor/src/: steperExample.cpp
