add_executable(
    irq_test
    irq.cpp
)
    
target_link_libraries(
    irq_test
    PRIVATE
    pico_stdlib
    hardware_interp
)   

# enable usb output, disable uart output
pico_enable_stdio_usb(slide 1)
pico_enable_stdio_uart(slide 0)

# create map/bin/hex/uf2 file etc.
pico_add_extra_outputs(irq_test)
